# slickexplosion

./: .~lock.superexplosionwriteup.odt#  CHANGELOG.txt  CMakeLists.txt  README.txt  fmod.txt  slickexplosion.kdev4  slickexplosionwriteup.odt  sphericaltocartesian.txt  superexplosionwriteup.odt
.kdev4/: slickexplosion.kdev4
assimpopengl/: README.txt
assimpopengl/include/: CMakeLists.txt  assimpopengl.h  commonheader.h  mesh.h  meshtex.h  meshvert.h  model.h  shader.h  smokecloud.h
assimpopengl/src/: CMakeLists.txt  camera.cpp  mesh.cpp  meshtex.cpp  meshvert.cpp  model.cpp  shader.cpp  smokecloud.cpp
include/: camera.h  commonheader.h  explodeit.h  shader.h  skybox.h  slickexplosion.h
openglresources/objects/: ufo1.blend  ufo1.mtl  ufo2.blend  ufo2.mtl  ufo3.blend  ufo3.mtl  ufo4.blend  ufo4.mtl  ufo5.blend  ufo5.blend1  ufo5.mtl
openglresources/shaders/: fragment.glsl  objects.frag  objects.vs  vertex.glsl  vertex1.glsl
src/: CMakeLists.txt  camera.cpp  explodeit.cpp  shader.cpp  skybox.cpp  slickexplosion.cpp
